week 6 almost done
